# Spectre

./: CMakeLists.txt  CMakeSettings.json  README.md
Backends/: CMakeLists.txt
Backends/include/: RenderSystemVK.h  VulkanBuffer.h  VulkanCommand.h  VulkanCommon.h  VulkanContext.h  VulkanDescriptor.h  VulkanEngine.h  VulkanFrameBuffer.h  VulkanImage.h  VulkanImages.h  VulkanPipeline.h  VulkanPrimitive.h  VulkanRenderPass.h  VulkanSemaphore.h  VulkanSwapchain.h  VulkanTexture.h  VulkanVertexBuffer.h
Backends/include/Vulkan/: RenderSystemVK.h  VulkanBuffer.h  VulkanCommand.h  VulkanContext.h  VulkanFrameBuffer.h  VulkanGui.h  VulkanImages.h  VulkanIndexBuffer.h  VulkanPipeline.h  VulkanPipelineCache.h  VulkanPrimitive.h  VulkanSwapchain.h  VulkanVertexBuffer.h
Backends/src/: RenderSystemVK.cpp  VulkanBuffer.cpp  VulkanCommand.cpp  VulkanContext.cpp  VulkanDescriptor.cpp  VulkanEngine.cpp  VulkanFrameBuffer.cpp  VulkanImage.cpp  VulkanImages.cpp  VulkanIndexBuffer.cpp  VulkanPipeline.cpp  VulkanPrimitive.cpp  VulkanRenderPass.cpp  VulkanSemaphore.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp  VulkanVertexBuffer.cpp
Backends/src/Vulkan/: RenderSystemVK.cpp  VulkanBuffer.cpp  VulkanCommand.cpp  VulkanEngine.cpp  VulkanGui.cpp  VulkanImages.cpp  VulkanIndexBuffer.cpp  VulkanPipeline.cpp  VulkanPipelineCache.cpp  VulkanPrimitive.cpp  VulkanSemaphore.cpp  VulkanVertexBuffer.cpp
Common/: README.md
Examples/: CMakeLists.txt
Examples/Base/: ExampleBase.cpp  ExampleBase.h  GLFWContext.cpp  GLFWContext.h  InputType.h
Examples/Example01_Triangle/: main.cpp
Examples/Example02_TextureBox/: main.cpp
RenderSystems/: CMakeLists.txt  README.md
RenderSystems/Vulkan/include/: VkCommon.h  VkContext.h  VulkanInstance.h
RenderSystems/Vulkan/src/: VkCommon.cpp
RenderSystems/include/: NativeWindow.h  RSDefs.h  RenderContextDesc.h
RenderSystems/include/Vulkan/: RenderSystemVK.h  VulkanBuffer.h  VulkanCommand.h  VulkanCommandBuffer.h  VulkanCommandBuffers.h  VulkanCommandPool.h  VulkanCommon.h  VulkanContext.h  VulkanDescriptorPool.h  VulkanDescriptorSet.h  VulkanDescriptorSetLayout.h  VulkanDevice.h  VulkanEngine.h  VulkanFence.h  VulkanFrameBuffer.h  VulkanGraphicTypes.h  VulkanImage.h  VulkanImages.h  VulkanIndexBuffer.h  VulkanInstance.h  VulkanLogicalDevice.h  VulkanPhysicalDevice.h  VulkanPipeline.h  VulkanPipelineCache.h  VulkanQueue.h  VulkanRenderPass.h  VulkanSemaphore.h  VulkanSurface.h  VulkanSwapchain.h  VulkanVertexBuffer.h
RenderSystems/src/Vulkan/: RenderSystemVK.cpp  VulkanBuffer.cpp  VulkanCommand.cpp  VulkanCommandBuffer.cpp  VulkanCommandBuffers.cpp  VulkanCommandPool.cpp  VulkanCommon.cpp  VulkanCommon.h  VulkanContext.cpp  VulkanDescriptorPool.cpp  VulkanDescriptorSet.cpp  VulkanDescriptorSetLayout.cpp  VulkanDevice.cpp  VulkanEngine.cpp  VulkanFence.cpp  VulkanFrameBuffer.cpp  VulkanImage.cpp  VulkanImages.cpp  VulkanIndexBuffer.cpp  VulkanInstance.cpp  VulkanInstance.h  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanPipeline.cpp  VulkanPipelineCache.cpp  VulkanQueue.cpp  VulkanRenderPass.cpp  VulkanSemaphore.cpp  VulkanSurface.cpp  VulkanSwapchain.cpp  VulkanVertexBuffer.cpp
Resources/Shaders/: triangle.frag  triangle.vert
Sample/: CMakeLists.txt  main.cpp
Sample/Base/: GLFWContext.h
Sample/Sample00_HelloWorld/: CMakeLists.txt  main.cpp
Sample/Sample01_Triangle/: CMakeLists.txt  main.cpp
Spectre/: CMakeLists.txt
Spectre/Backend/: CMakeLists.txt  ReadMe.md
Spectre/Backend/include/: VkConstants.h
Spectre/include/: Spectre.h
Spectre/src/: Spectre.cpp
SpectreCommon/: CMakeLists.txt  README.md
SpectreCommon/include/: Alignment.h  Allocator.h  AtExit.h  CommonDefinitions.h  FileUtils.h  FormotString.h  LogManager.h  Macro.h  Math.h  MathDef.h  Mutex.h  NativeWindow.h  Noncopyable.h  Platform.h  RenderDef.h  RenderDefs.h  RenderTypes.h  ShaderTool.h  SpectreApi.h  SpectreDef.h  SpectreDefs.h  Timer.h  Vertex.h
SpectreCommon/include/Geometry/: Face.h  Mesh.h  Vertex.h
SpectreCommon/include/Math/: MathDef.h  SimpleMath.h  SimpleMath.inl  Vertex.h
SpectreCommon/src/: AtExit.cpp  FileUtils.cpp  LogManager.cpp  Mutex.cpp  Timer.cpp
SpectreCommon/src/Geometry/: Mesh.cpp
SpectreCommon/src/Math/: SimpleMath.cpp  Vertex.cpp
SpectreComponents/: CMakeLists.txt  README.md
SpectreComponents/ImGuiContext/: CMakeLists.txt  ImGuiContext.cpp  ImGuiContext.h
SpectreCore/: CMakeLists.txt  README.md
SpectreCore/include/: Engine.h  EngineCreateInfo.h  Entity.h  Material.h  Object.h  Object3D.h  PipelineBufferManager.h  Scene.h  SceneNode.h  ShaderTool.h  Spectre.h
SpectreCore/include/Buffers/: Buffer.h  BufferBlock.h  IndexBuffer.h  VertexBuffer.h
SpectreCore/include/Cameras/: Camera.h  PerspectiveCamera.h
SpectreCore/include/Geometries/: BufferGeometry.h
SpectreCore/include/Materials/: BufferMaterial.h  Material.h  Materials.h  MeshBasicMaterial.h
SpectreCore/include/Objects/: Mesh.h  Object3D.h  Scene.h
SpectreCore/include/Renderers/: Renderer.h
SpectreCore/include/Scenes/: Scene.h
SpectreCore/src/: Engine.cpp  Entity.cpp  Object.cpp  Object3D.cpp  PipelineBufferManager.cpp  Scene.cpp  SceneNode.cpp  ShaderTool.cpp  Spectre.cpp
SpectreCore/src/Buffers/: BufferBlock.cpp  IndexBuffer.cpp  VertexBuffer.cpp
SpectreCore/src/Cameras/: Camera.cpp  PerspectiveCamera.cpp
SpectreCore/src/Geometries/: BufferGeometry.cpp
SpectreCore/src/Materials/: BufferMaterial.cpp  Material.cpp  Materials.cpp  MeshBasicMaterial.cpp
SpectreCore/src/Objects/: Mesh.cpp  Object3D.cpp  Scene.cpp
SpectreCore/src/Renderers/: Renderer.cpp
SpectreCore/src/Scenes/: Scene.cpp
SpectreFX/: README.md
SpectreModule/: README.md
tests/: CMakeList.txt  CMakeLists.txt  includes.h  logTest.cpp  main.cpp  mathTest.cpp
